[gd_scene load_steps=2 format=3 uid="uid://c71y743pcviuv"]

[ext_resource type="Script" path="res://scripts/effect/effect.gd" id="1_5tmll"]

[node name="Effect" type="Node"]
script = ExtResource("1_5tmll")
data_name = "test"

[node name="LifeCycleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="TriggerTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="LifeCycleTimer" to="." method="_on_life_cycle_timer_timeout"]
[connection signal="timeout" from="TriggerTimer" to="." method="_on_trigger_timer_timeout"]
